Fix text wrapping, fix a bug where the divide sign was being input as '/'

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 .container {
     display: flex;
     width: 400px;
@@ -45,24 +49,27 @@ button {
     min-height: 20%;
     width: 100%;
     font-size: 3em;
+    margin-right: 8px;
 }
 
-.display > span {
-    margin: auto 8px 0 auto;
-    height: 60%;
-    display: flex;
-    flex-wrap: wrap;
-    word-wrap: normal;
-    width: 100%;
+.display > p {
+    flex-shrink: 0;
+    margin: 0;
+    text-align: right;
 }
 
 #prev {
     font-size: 0.6em;
+    word-wrap: break-word;
+    min-height: 40px;
     height: 40%;
+    width: 100%;
     padding-top: 8px;
 }
 
 #current {
-    word-wrap: normal;
-    width: 100%
+    word-wrap: break-word;
+    min-height: 60px;
+    height: 60%;
+    width: 100%;
 }
